--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Solutions d'Aubin</title>
+  <title>Solutions d'Aubin & GPT</title>
   <style>
     body { font-family: Arial, sans-serif; margin: 0; background: #f9f9f9; color: #333; }
     header { background: #222; color: white; padding: 1rem; text-align: center; }
@@ -18,7 +18,7 @@
 </head>
 <body>
   <header>
-    <h1>Solutions d'Aubin</h1>
+    <h1>Solutions d'Aubin & GPT</h1>
     <p>Réponses et astuces sur GMod, Xbox, et plus</p>
   </header>
 
