--- a/index.html
+++ b/index.html
@@ -5,15 +5,57 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Solutions d'Aubin & GPT</title>
   <style>
-    body { font-family: Arial, sans-serif; margin: 0; background: #f9f9f9; color: #333; }
-    header { background: #222; color: white; padding: 1rem; text-align: center; }
-    nav { background: #444; padding: 0.5rem; display: flex; justify-content: center; flex-wrap: wrap; }
-    nav a { color: white; margin: 0.5rem 1rem; text-decoration: none; font-weight: bold; }
-    nav a:hover { text-decoration: underline; }
-    .content { padding: 2rem; }
-    section { display: none; }
-    section.active { display: block; }
-    pre { background: #eee; padding: 1rem; overflow-x: auto; }
+    body {
+      font-family: Arial, sans-serif;
+      margin: 0;
+      background: url('https://images.unsplash.com/photo-1519125323398-675f0ddb6308?auto=format&fit=crop&w=1950&q=80') no-repeat center center fixed;
+      background-size: cover;
+      color: #fff;
+    }
+    header {
+      background: rgba(0, 0, 0, 0.7);
+      color: white;
+      padding: 1rem;
+      text-align: center;
+    }
+    nav {
+      background: rgba(0, 0, 0, 0.8);
+      padding: 0.5rem;
+      display: flex;
+      justify-content: center;
+      flex-wrap: wrap;
+    }
+    nav a {
+      color: white;
+      margin: 0.5rem 1rem;
+      text-decoration: none;
+      font-weight: bold;
+    }
+    nav a:hover {
+      text-decoration: underline;
+    }
+    .content {
+      padding: 2rem;
+      background: rgba(0, 0, 0, 0.6);
+    }
+    section {
+      display: none;
+    }
+    section.active {
+      display: block;
+    }
+    pre {
+      background: rgba(255, 255, 255, 0.2);
+      padding: 1rem;
+      overflow-x: auto;
+      color: #fff;
+    }
+    ul li {
+      margin-bottom: 1rem;
+    }
+    a {
+      color: #8cf;
+    }
   </style>
 </head>
 <body>
@@ -23,11 +65,11 @@
   </header>
 
   <nav>
-    <a href="#" onclick="showTab('gmod')">GMod</a>
-    <a href="#" onclick="showTab('xbox')">Xbox</a>
-    <a href="#" onclick="showTab('autres')">Autres</a>
-    <a href="#" onclick="showTab('outils')">Outils</a>
-    <a href="#" onclick="showTab('credits')">À propos</a>
+    <a href="#" onclick="showTab('gmod')">🔧 GMod</a>
+    <a href="#" onclick="showTab('xbox')">🎮 Xbox</a>
+    <a href="#" onclick="showTab('autres')">🛠️ Autres</a>
+    <a href="#" onclick="showTab('outils')">🧰 Outils</a>
+    <a href="#" onclick="showTab('credits')">ℹ️ À propos</a>
   </nav>
 
   <div class="content">
@@ -45,6 +87,8 @@
 └── addon.txt</pre>
         </li>
         <li><strong>👮‍♂️ ULX ne fonctionne pas</strong><br/>Assurez-vous que le dossier `ulx` est dans `garrysmod/addons/` et que le fichier `ulx.lua` est bien lu.</li>
+        <li><strong>💾 Sauvegarde d'entités personnalisées</strong><br/>Vous pouvez utiliser `file.Write("entites.json", util.TableToJSON(entTable))` côté serveur pour enregistrer l'état de vos entités.</li>
+        <li><strong>🔐 Gérer les permissions d'outils</strong><br/>Utilisez `tool.Allow` dans un hook `PlayerGiveSWEP` pour restreindre les outils à certaines équipes.</li>
       </ul>
     </section>
 
@@ -53,6 +97,8 @@
       <ul>
         <li><strong>🌐 Problèmes de connexion Xbox Live</strong><br/>Redémarre ta box, puis va dans les paramètres réseau et utilise "Test de connexion" pour voir les erreurs exactes.</li>
         <li><strong>🧾 Résilier un abonnement Game Pass</strong><br/>Va sur <a href="https://account.microsoft.com/services">account.microsoft.com/services</a> et clique sur "Gérer" à côté de l'abonnement.</li>
+        <li><strong>🎮 Partage de jeux entre comptes</strong><br/>Utilise la fonction "Xbox principale" pour partager tes jeux et abonnements avec un deuxième compte sur la même console.</li>
+        <li><strong>🕹️ Manette non détectée</strong><br/>Vérifie les piles, réinitialise la manette (bouton à l’arrière), puis reconnecte-la via USB ou sans fil.</li>
       </ul>
     </section>
 
@@ -61,6 +107,8 @@
       <ul>
         <li><strong>🪟 Réparer une application qui crash sur Windows</strong><br/>Ouvre les paramètres > Applications > clique sur l’app > Options avancées > Réparer.</li>
         <li><strong>📁 Afficher les extensions de fichiers</strong><br/>Explorateur de fichiers > Affichage > cocher "Extensions de noms de fichiers".</li>
+        <li><strong>🔊 Son ne fonctionne plus</strong><br/>Vérifie le périphérique de sortie dans les paramètres Windows > Système > Son.</li>
+        <li><strong>🔒 Réinitialiser un mot de passe oublié</strong><br/>Sur Windows : Écran de connexion > "J’ai oublié mon mot de passe" > suivez les étapes via votre compte Microsoft.</li>
       </ul>
     </section>
 
@@ -70,11 +118,13 @@
         <li><strong>📹 Clipchamp gratuit</strong><br/>Outil de montage vidéo simple et en ligne. Parfait pour YouTube sans watermark en 720p.</li>
         <li><strong>🧪 Notepad++</strong><br/>Éditeur de code ultra léger, pratique pour modifier des fichiers `.lua` ou `.json`.</li>
         <li><strong>🌐 OBS Studio</strong><br/>Logiciel gratuit pour enregistrer ou streamer. Très utile pour Twitch.</li>
+        <li><strong>🔤 ShareX</strong><br/>Capture d'écran avancée, très utile pour documenter ses bugs ou créer des tutos.</li>
+        <li><strong>📂 FileZilla</strong><br/>Client FTP pour gérer les fichiers de ton serveur (pratique pour GMod).</li>
       </ul>
     </section>
 
     <section id="credits">
-      <h2>À propos</h2>
+      <h2>ℹ️ À propos</h2>
       <p>Ce site est maintenu par <strong>Aubin</strong>. Il compile des solutions pratiques données avec l'aide de <strong>ChatGPT</strong>, une IA développée par OpenAI. N'hésitez pas à réutiliser ou partager le contenu !</p>
     </section>
   </div>
