--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Solutions d'Aubin</title>
+  <title>Solutions d'Aubin & GPT</title>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -98,7 +98,7 @@
 <body>
 
   <header>
-    <h1>Solutions d'Aubin</h1>
+    <h1>Solutions d'Aubin & GPT</h1>
     <p>Réponses et astuces sur GMod, Xbox, et plus</p>
   </header>
 
@@ -186,7 +186,7 @@
 
     <section id="credits">
       <h2>À propos</h2>
-      <p>Page créée par Aubin Clem. Pour toute question, contacte-moi via Twitch ou Discord.</p>
+      <p>Page créée par @Aubinclem. Pour toute question, contacte-moi via Twitch ou Discord.</p>
     </section>
   </div>
 
