--- a/index.html
+++ b/index.html
@@ -110,10 +110,10 @@
     <label for="backgroundSelect">Choisis un fond d'écran :</label>
     <select id="backgroundSelect" aria-label="Sélection du fond d'écran">
       <option value="https://images.unsplash.com/photo-1506744038136-46273834b3fb?auto=format&fit=crop&w=1470&q=80">Forêt mystique 🌲</option>
-      <option value="https://images.unsplash.com/photo-1462331940025-496dfbfc7564?auto=format&fit=crop&w=1470&q=80">Montagnes enneigées ❄️</option>
-      <option value="https://images.unsplash.com/photo-1500534623283-312aade485b7?auto=format&fit=crop&w=1470&q=80">Plage au coucher de soleil 🌅</option>
-      <option value="https://images.unsplash.com/photo-1494526585095-c41746248156?auto=format&fit=crop&w=1470&q=80">Ville de nuit ✨</option>
-      <option value="https://images.unsplash.com/photo-1504384308090-c894fdcc538d?auto=format&fit=crop&w=1470&q=80">Désert et dunes 🏜️</option>
+      <option value="https://images.unsplash.com/photo-1462331940025-496dfbfc7564?auto=format&fit=crop&w=1470&q=80">Espace ❄️</option>
+      <option value="https://images.unsplash.com/photo-1500534623283-312aade485b7?auto=format&fit=crop&w=1470&q=80">Montagnes au coucher de soleil 🌅</option>
+      <option value="https://images.unsplash.com/photo-1494526585095-c41746248156?auto=format&fit=crop&w=1470&q=80">Maison à l'aube 🏠</option>
+      <option value="https://images.unsplash.com/photo-1504384308090-c894fdcc538d?auto=format&fit=crop&w=1470&q=80">Ambiance de bureau 📦</option>
     </select>
   </div>
 
